<resources>
    <string name="app_name">Whatsapp Clone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email-id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up_to_create_new_account"><b><u>Sign Up !</u></b> to create new account</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="register">Register</string>
    <string name="sign_in_already_have_an_account"><b><u>Sign In !</u></b> Already have an account</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="fullname">Fullname</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="create_group">Create Group</string>
    <string name="write_your_message">Write your message...</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="o_t_p">O.T.P</string>
    <string name="send_o_t_p">Send O.T.P</string>
    <string name="message">Message</string>
    <string name="profile_setting">Profile</string>
    <string name="my_profile_details_are_listed_below">My profile details is listed below, send message if you want to have a conversation</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="last_seen">Last seen</string>
    <string name="receiver_message_here">receiver message here</string>
    <string name="sender_message">Sender Message</string>
</resources>
