<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:text="@string/fullname"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/online"
                    android:visibility="invisible"/>


            </LinearLayout>

            <TextView
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ubuntu_regular"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:text="@string/status"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/accept_request_btn"
                    android:textColor="@color/aacahaDarkGreenColor"
                    android:fontFamily="@font/ubuntu_regular"
                    android:layout_width="120dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/send_request_background"
                    android:visibility="gone"
                    android:text="@string/accept"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/decline_request_btn"
                    android:textColor="@color/aachaDarkRedColor"
                    android:layout_width="120dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"
                    android:text="@string/cancel"
                    android:fontFamily="@font/ubuntu_regular"
                    android:background="@drawable/cancel_request_background"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>