<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.PhoneLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:background="@android:color/white">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@android:color/transparent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="phone_login.json"
                app:lottie_loop="false" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/login_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_logo"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:mtf_backgroundColor="@color/lightestColor"
                app:mtf_image="@drawable/ic_smartphone"
                app:mtf_labelColor="@color/darkestColor"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittexts_background"
                    android:fontFamily="@font/ubuntu_regular"
                    android:inputType="phone"
                    android:hint="@string/phone_number"
                    android:textSize="15sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/login_phone_send_otp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttons_background"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/send_o_t_p"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/login_otp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_send_otp"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:mtf_backgroundColor="@color/lightestColor"
                app:mtf_image="@drawable/ic_password"
                app:mtf_labelColor="@color/darkestColor"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/login_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittexts_background"
                    android:fontFamily="@font/ubuntu_regular"
                    android:inputType="phone"
                    android:hint="@string/o_t_p"
                    android:textSize="15sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/login_phone_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_otp_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttons_background"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>