<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/visit_profile_image"
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:gravity="center"
                        android:text="@string/profile_setting"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightestColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/my_profile_details_are_listed_below"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="190dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="profile.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/fullname"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightestColor" />

                    <TextView
                        android:id="@+id/visit_user_profile_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:gravity="center"
                        android:padding="5dp"
                        android:scrollHorizontally="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="190dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="status.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/status"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/lightestColor" />

                    <TextView
                        android:id="@+id/visit_user_profile_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:gravity="center"
                        android:scrollHorizontally="false"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/send_request_message_btn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/send_request_background"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/message"
                android:visibility="visible"
                android:textColor="@color/aacahaDarkGreenColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decline_request_message_btn"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/cancel_request_background"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/cancel_request"
                android:textColor="@color/aachaDarkRedColor"
                android:visibility="invisible"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>